[gd_scene load_steps=4 format=2]

[ext_resource path="res://Gamemode Icons/FFA.png" type="Texture" id=1]
[ext_resource path="res://Assets/Theme/fishards_theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/MainMenu/GamemodeToggle.gd" type="Script" id=3]

[node name="GamemodeToggle" type="PanelContainer"]
margin_right = 95.0
margin_bottom = 19.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="."]
margin_left = 3.0
margin_right = 95.0
margin_bottom = 13.0

[node name="Icon" type="Control" parent="HBox"]
margin_right = 18.0
margin_bottom = 13.0
rect_min_size = Vector2( 18, 0 )
mouse_filter = 2

[node name="sprite" type="Sprite" parent="HBox/Icon"]
position = Vector2( 8.74062, 7.90104 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="HBox"]
margin_left = 22.0
margin_right = 76.0
margin_bottom = 13.0
custom_colors/font_color = Color( 0.396078, 0.396078, 0.396078, 1 )
text = "FREE FOR ALL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckBoxContainer" type="Control" parent="HBox"]
margin_left = 80.0
margin_right = 92.0
margin_bottom = 13.0
rect_min_size = Vector2( 12, 0 )
mouse_filter = 2

[node name="CheckBox" type="CheckBox" parent="HBox/CheckBoxContainer"]
margin_left = -2.0
margin_right = 12.0
margin_bottom = 19.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HBox/CheckBoxContainer"]
margin_left = -5.0136
margin_top = 12.8707
margin_right = 4.9864
margin_bottom = 16.8707
mouse_filter = 2
color = Color( 0.760784, 0.760784, 0.760784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="HBox/CheckBoxContainer/CheckBox" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="HBox/CheckBoxContainer/CheckBox" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="HBox/CheckBoxContainer/CheckBox" to="." method="_on_CheckBox_pressed"]
